# firecrawl-dashboard

./: .env.example  .gitignore  DOCKER_SETUP.md  Dockerfile  MANIFEST.in  README.md  dashboard.sh  docker-compose.yml  firecrawl-dashboard  pyproject.toml  requirements.txt  run_dashboard.py  setup.py  test_migration.py  test_refactor.py
docs/: PROJECT_OVERVIEW.md
scripts/: cleanup.sh  debug_health.py  emergency_flood_stop.py  recovery.sh
src/firecrawl_dashboard/: __init__.py  config.py  enhanced_jobs.py  main.py  models.py
src/firecrawl_dashboard/services/: __init__.py  health_service.py  job_processing_service.py  job_service.py  metrics_service.py  redis_service.py
src/firecrawl_dashboard/templates/: clean_dashboard.html  dashboard.html  enhanced_dashboard.html  job_data_viewer.html
tests/: test_setup.py
